Footer con los links de las redes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Portafolio | Joseph González Herrera</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/main.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 
@@ -47,23 +48,23 @@
         <div class="section-content" id="section-1">
           <p>
             Soy Ingeniero Informático graduado de la UNED
-            con experiencia en desarrollo Full Stack y creación de videojuegos. 
-            Trabajo con tecnologías como C++, C#, SQL, CSS, HTML, JavaScript, GML, 
-            GameMaker2 y Unity, aplicando principios de ingeniería de software, diseño 
+            con experiencia en desarrollo Full Stack y creación de videojuegos.
+            Trabajo con tecnologías como C++, C#, SQL, CSS, HTML, JavaScript, GML,
+            GameMaker2 y Unity, aplicando principios de ingeniería de software, diseño
             de mecánicas y UX/UI.
           </p>
           <p>
-            He participado en proyectos académicos y profesionales, 
-            incluyendo el desarrollo de módulos institucionales para la 
-            UNED bajo metodologías ágiles SCRUM y arquitectura MVC. 
-            Como desarrollador independiente de videojuegos, he creado y 
-            publicado juegos en plataformas como GX.Games e Itch.io, 
-            donde mi videojuego Reflection ha superado las 130,000 
+            He participado en proyectos académicos y profesionales,
+            incluyendo el desarrollo de módulos institucionales para la
+            UNED bajo metodologías ágiles SCRUM y arquitectura MVC.
+            Como desarrollador independiente de videojuegos, he creado y
+            publicado juegos en plataformas como GX.Games e Itch.io,
+            donde mi videojuego Reflection ha superado las 130,000
             partidas a nivel global.
           </p>
           <p>
-            Soy una persona orientada al aprendizaje continuo, la 
-            resolución creativa de problemas y la construcción de 
+            Soy una persona orientada al aprendizaje continuo, la
+            resolución creativa de problemas y la construcción de
             experiencias interactivas funcionales, entretenidas y de calidad.
           </p>
         </div>
@@ -128,10 +129,18 @@
   </main>
 
   <!-- FOOTER -->
-  <footer class="site-footer">
-    <p>© 2025 Joseph Manrique González Herrera</p>
-    <p>Contacto: <a href="mailto:goteks28@gmail.com">goteks28@gmail.com</a></p>
+  <footer>
+    <div class="footer-icons">
+      <a href="https://www.youtube.com/@JosephGHIndieGames" target="_blank">
+        <i class="fab fa-youtube"></i></a>
+      <a href="https://www.linkedin.com/in/joseph-gonzález-herrera/" target="_blank">
+        <i class="fab fa-linkedin"></i></a>
+      <a href="https://www.patreon.com/c/JosephGHIndieGames" target="_blank">
+        <i class="fab fa-patreon"></i></a>
+
+    </div>
   </footer>
+
 
 
 </body>
