--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
     <img src="imgs/logo.png" alt="Logo" class="header-logo">
   </div>
 
-  <nav class="header-right nav-menu">
+  <nav class="nav-menu">
     <ul>
       <li><a href="#sobre-mi">Sobre mí</a></li>
-      <li><a href="#proyectos">Proyectos</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropbtn">Proyectos ▾</a>
+        <div class="dropdown-content">
+          <a href="#software">Software</a>
+          <a href="#videojuegos">Videojuegos</a>
+        </div>
+      </li>
       <li><a href="#contacto">Contacto</a></li>
     </ul>
   </nav>
