--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
   <nav class="nav-menu">
     <ul>
-      <li><a href="#sobre-mi">Sobre mí</a></li>
+      <li><a href="index.html">Sobre mí</a></li>
       <li class="dropdown">
         <a href="#" class="dropbtn">Proyectos ▾</a>
         <div class="dropdown-content">
           <a href="#software">Software</a>
-          <a href="#videojuegos">Videojuegos</a>
+          <a href="videojuegos.html">Videojuegos</a>
         </div>
       </li>
       <li><a href="#contacto">Contacto</a></li>
@@ -134,21 +134,18 @@
 
   </main>
 
-  <!-- FOOTER -->
-  <footer>
-    <div class="footer-icons">
-      <a href="https://www.youtube.com/@JosephGHIndieGames" target="_blank">
-        <i class="fab fa-youtube"></i></a>
-      <a href="https://www.linkedin.com/in/joseph-gonzález-herrera/" target="_blank">
-        <i class="fab fa-linkedin"></i></a>
-      <a href="https://www.patreon.com/c/JosephGHIndieGames" target="_blank">
-        <i class="fab fa-patreon"></i></a>
-
-    </div>
-  </footer>
-
-
-
 </body>
+<!-- FOOTER -->
+<footer>
+  <div class="footer-icons">
+    <a href="https://www.youtube.com/@JosephGHIndieGames" target="_blank">
+      <i class="fab fa-youtube"></i></a>
+    <a href="https://www.linkedin.com/in/joseph-gonzález-herrera/" target="_blank">
+      <i class="fab fa-linkedin"></i></a>
+    <a href="https://www.patreon.com/c/JosephGHIndieGames" target="_blank">
+      <i class="fab fa-patreon"></i></a>
+
+  </div>
+</footer>
 
 </html>
