Actualización del href para la nueva pestaña de software

--- a/videojuegos.html
+++ b/videojuegos.html
@@ -23,8 +23,8 @@
             <li class="dropdown">
                 <a href="#" class="dropbtn">Proyectos ▾</a>
                 <div class="dropdown-content">
-                    <a href="#software">Software</a>
-                    <a href="#videojuegos">Videojuegos</a>
+                    <a href="software.html">Software</a>
+                    <a href="videojuegos.html">Videojuegos</a>
                 </div>
             </li>
             <li><a href="#contacto">Contacto</a></li>
