--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li class="dropdown">
         <a href="#" class="dropbtn">Proyectos ▾</a>
         <div class="dropdown-content">
-          <a href="#software">Software</a>
+          <a href="software.html">Software</a>
           <a href="videojuegos.html">Videojuegos</a>
         </div>
       </li>
