--- a/videojuegos.html
+++ b/videojuegos.html
@@ -27,7 +27,7 @@
                     <a href="videojuegos.html">Videojuegos</a>
                 </div>
             </li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="Contacto.html">Contacto</a></li>
         </ul>
     </nav>
 </header>
