Fix Imagenes Tareas

--- a/software.html
+++ b/software.html
@@ -31,7 +31,7 @@
         </ul>
     </nav>
 </header>
-
+<!-- Contenido --> >
 <body>
     <main class="main-content">
         <h1>MIS PROYECTOS</h1>
@@ -43,7 +43,7 @@
 
             <div class="project-card">
                 <div class="carousel"
-                    data-images='["imgs/tareas/01.png", "imgs/tareas/02.png", "imgs/tareas/03.png", "imgs/tareas/04.png", "imgs/tareas/05.png", "imgs/tareas/06.png", "imgs/tareas/07.png"]'>
+                    data-images='["imgs/Tareas/01.png", "imgs/Tareas/02.png", "imgs/Tareas/03.png", "imgs/Tareas/04.png", "imgs/Tareas/05.png", "imgs/Tareas/06.png", "imgs/Tareas/07.png"]'>
                 </div>
 
                 <h3>Organizador de tareas</h3>
