Añadí GitHub perfil link

--- a/Contacto.html
+++ b/Contacto.html
@@ -39,8 +39,10 @@
     <h1>JOSEPH MANRIQUE GONZÁLEZ HERRERA</h1>
     <p style="margin-bottom: 10%;">Full-Stack Developer | Game Developer</p>
 
-    <p>Puedes comunicarte conmigo a través de mi correo electrónico 
-      <a href="mailto:goteks28@gmail.com">goteks28@gmail.com</a> o mediante cualquiera de mis redes que se encuentran a pie de página  </p>
+    <p>Puedes comunicarte conmigo a través de mi correo electrónico
+      <a href="mailto:goteks28@gmail.com">goteks28@gmail.com</a> o mediante cualquiera de mis redes que se encuentran a
+      pie de página
+    </p>
   </main>
 
 </body>
@@ -53,7 +55,9 @@
       <i class="fab fa-linkedin"></i></a>
     <a href="https://www.patreon.com/c/JosephGHIndieGames" target="_blank">
       <i class="fab fa-patreon"></i></a>
-
+    <a href="https://github.com/Joseph-28" target="_blank">
+      <i class="fab fa-github"></i>
+    </a>
   </div>
 </footer>
 
