--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
       <i class="fab fa-linkedin"></i></a>
     <a href="https://www.patreon.com/c/JosephGHIndieGames" target="_blank">
       <i class="fab fa-patreon"></i></a>
-
+    <a href="https://github.com/Joseph-28" target="_blank">
+      <i class="fab fa-github"></i>
+    </a>
   </div>
 </footer>
 
