--- a/videojuegos.html
+++ b/videojuegos.html
@@ -35,7 +35,7 @@
 <body>
     <main class="main-content">
         <h1>MIS PROYECTOS</h1>
-        <p style="margin-bottom: 5%;">Proyectos de desarrollo de videojuegos en los que he trabajado 
+        <p style="margin-bottom: 5%;">Proyectos de desarrollo de videojuegos en los que he trabajado
             desde febrero de 2024 hasta la fecha
         </p>
 
@@ -206,7 +206,9 @@
             <i class="fab fa-linkedin"></i></a>
         <a href="https://www.patreon.com/c/JosephGHIndieGames" target="_blank">
             <i class="fab fa-patreon"></i></a>
-
+        <a href="https://github.com/Joseph-28" target="_blank">
+            <i class="fab fa-github"></i>
+        </a>
     </div>
 </footer>
 
